# warp-sabre

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  bootstrap  build_homebrew.sh  build_linux.sh  build_mingw.sh  configure.ac
.github/: xmorph-makefile.patch
.github/workflows/: build.yml  ccpp.yml
pyostn02/: OSGB.py  OSTN02.py  transform.py
src/: AddSubtract.cpp  AddSubtract.pl  ClearBounds.cpp  ClearTiles.cpp  CopyPixels.cpp  CopyPixels.h  ErrorHandling.h  GenTiles.cpp  GetBounds.cpp  GetBounds.h  ImageWarpByFunc.cpp  ImageWarpByFunc.h  ImgFrameBase.h  ImgMagick.cpp  ImgMagick.h  MakeWorld.cpp  Makefile.am  Makefile.old  MaskRectangle.cpp  OSTN02.pl  OSTN02Perl.cpp  OSTN02Perl.h  ProgramOptions.cpp  ProgramOptions.h  PyOstn02.cpp  PyOstn02.h  ReadDelimitedFile.cpp  ReadDelimitedFile.h  ReadKmlFile.cpp  ReadKmlFile.h  SlippyMapTile.h  SourceKml.h  StringUtils.cpp  StringUtils.h  TestCas.cpp  Tile.cpp  Tile.h  TransformAffine.cpp  TransformAffine.h  TransformPoly.cpp  (+6 more)
src/ganzc/: LatLong-OSGBconversion.cpp  LatLong-OSGBconversion.h  OSGBConversions.cpp  constants.h
src/gbos1936/: Gbos1936.cpp  Gbos1936.h
src/libmorph/: RgbaImage.c  my_malloc.c  relax.c  resample_snippet.h
src/newmat-10/: example  garch  nl_ex  sl_ex  test_exc  tmt
src/scripts/: ccbounds.py  cctrans.py  ccworld.py
