bin_PROGRAMS = warp-sabre gentiles cleartiles clearbounds
warp_sabre_SOURCES = ImageWarpByFunc.cpp ImgMagick.cpp ReadDelimitedFile.cpp StringUtils.cpp Tile.cpp TransformPoly.cpp WarpOs.cpp WriteKml.cpp ganzc/LatLong-OSGBconversion.cpp gbos1936/Gbos1936.cpp
warp_sabre_CPPFLAGS = @MAGICKWAND_CFLAGS@ $(BOOST_CPPFLAGS)
warp_sabre_LDADD = @MAGICKWAND_LIBS@ $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS) -lnewmat
gentiles_SOURCES = CopyPixels.cpp GenTiles.cpp GetBounds.cpp ImageWarpByFunc.cpp ImgMagick.cpp ReadDelimitedFile.cpp ReadKmlFile.cpp StringUtils.cpp Tile.cpp gbos1936/Gbos1936.cpp
gentiles_CPPFLAGS = @MAGICKWAND_CFLAGS@ @LIBXML_CFLAGS@ $(BOOST_CPPFLAGS)
gentiles_LDADD = @MAGICKWAND_LIBS@ @LIBXML_LIBS@ $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS)
cleartiles_SOURCES = ClearTiles.cpp GetBounds.cpp ImageWarpByFunc.cpp ImgMagick.cpp ReadDelimitedFile.cpp ReadKmlFile.cpp StringUtils.cpp Tile.cpp gbos1936/Gbos1936.cpp
cleartiles_CPPFLAGS = @MAGICKWAND_CFLAGS@ @LIBXML_CFLAGS@ $(BOOST_CPPFLAGS)
cleartiles_LDADD = @MAGICKWAND_LIBS@ @LIBXML_LIBS@ $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS)
clearbounds_SOURCES = ClearBounds.cpp CopyPixels.cpp GetBounds.cpp ImageWarpByFunc.cpp ImgMagick.cpp ReadDelimitedFile.cpp ReadKmlFile.cpp StringUtils.cpp Tile.cpp gbos1936/Gbos1936.cpp
clearbounds_CPPFLAGS = @MAGICKWAND_CFLAGS@ @LIBXML_CFLAGS@ $(BOOST_CPPFLAGS)
clearbounds_LDADD = @MAGICKWAND_LIBS@ @LIBXML_LIBS@ $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS)
